--- a/0x04-TypeScript/task_0/templates/0-index.html
+++ b/0x04-TypeScript/task_0/templates/0-index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>lets test this</title>
+    <link rel="stylesheet" href="static/styles/0-body.css">
+    <link rel="stylesheet" href="static/styles/0-header.css">
+    <link rel="stylesheet" href="static/styles/0-footer.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="/task_0/main.ts"></script>
+    <script src="static/scripts/0-main.js"></script>
   </head>
   <body>
     <p>empty body</p>
